// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatingButton renders correctly as link 1`] = `
<a
  className="wds-floating-button"
  disabled={false}
  href="some link"
  onClick={[Function]}
>
  AZ
</a>
`;

exports[`FloatingButton renders correctly with a children 1`] = `
<button
  className="wds-floating-button"
  disabled={false}
  onClick={[Function]}
>
  <svg
    height="100%"
    id="wds-icons-trash-small"
    viewBox="0 0 18 18"
    width="100%"
  >
    <g
      fillRule="evenodd"
    >
      <path
        d="M14 15H4V6h10v9zM6.875 3h4v1h-4V3zM16 4h-3.125V2a1 1 0 0 0-1-1h-6a1 1 0 0 0-1 1v2H2a1 1 0 0 0 0 2v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6a1 1 0 0 0 0-2z"
      />
      <path
        d="M7 14a1 1 0 0 0 1-1V9a1 1 0 0 0-2 0v4a1 1 0 0 0 1 1m4 0a1 1 0 0 0 1-1V9a1 1 0 0 0-2 0v4a1 1 0 0 0 1 1"
      />
    </g>
  </svg>
</button>
`;

exports[`FloatingButton renders correctly with a label 1`] = `
<button
  className="wds-floating-button"
  disabled={false}
  onClick={[Function]}
>
  AZ
</button>
`;

exports[`FloatingButton renders correctly with default values 1`] = `
<button
  className="wds-floating-button"
  disabled={false}
  onClick={[Function]}
/>
`;
